--- a/latex/oppgave.tex
+++ b/latex/oppgave.tex
@@ -22,7 +22,7 @@
 \input{matter/lresystems}
 \input{matter/baseline}
 \input{matter/ivector}
-
+\input{matter/classifier}
 \part{implementation}
 
 
