--- a/latex/references.bib
+++ b/latex/references.bib
@@ -86,14 +86,16 @@
   school = {Brno University of Technology, Faculty of Information Technology},
   type = {Doctoral thesis}
 }
-
-
-@article{schwarz2009phoneme,
-  title={Phoneme recognition based on long temporal context$\}$},
-  author={Schwarz, P.},
-  year={2009},
-  publisher={Faculty of Information Technology BUT$\}$}
+@Article{liblinear,
+  author = 	 {Rong-En Fan and Kai-Wei Chang and Cho-Jui Hsieh and Xiang-Rui Wang and Chih-Jen Lin},
+  title = 	 {{LIBLINEAR}: A Library for Large Linear Classification},
+  journal = 	 {Journal of Machine Learning Research},
+  year = 	 {2008},
+  volume =	 {9},
+  pages =	 {1871--1874}
 }
+
+
 
 
 
