--- a/latex/matter/ivector.tex
+++ b/latex/matter/ivector.tex
@@ -4,7 +4,7 @@ iVectors are one example of subspace modelling approaches that can be used to re
 
 \section{Background}
 
-
+A well known technique
 
 
 
